# Scientific-Skills-for-Clinical-Trial

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json
.codebuddy/: README.md  US Norovirus Epidemiological Briefing_202603031216.md
.github/workflows/: python-app.yml
docs/: README.md  Skills List_for_Word.md  repo_layout.md  skill_dedupe_report.md  skills_catalog.md  skills_guide.md
reports/: self_check_report.json
scripts/: README.md  _extract_docx_text.py  build_tvax006_IMA_v2_docx.py  cansino_detail4843_manual_docx.py  cleanup_generated_artifacts.py  convert_doc_to_docx.py  convert_fast.py  convert_review_materials.py  convert_review_to_md.py  convert_to_md.py  extract_doc_text.py  extract_docx_full.py  extract_docx_to_md.py  extract_ib_texts.py  extract_tables_to_docx.py  extract_xlsx_full.py  generate_audit_report_docx.py  generate_clinical_doc_audit_report.py  generate_clinical_overview_doc_review_docx.py  generate_csr_docx.py  generate_mmr_audit_report.py  generate_norovirus_review_docx.py  generate_phase_summary_doc_review_docx.py  make_safe_md_copies.py  md_to_docx.py  project_self_check.py  review_clinical_xlsx.py  skill_dedupe_report.py  sync_skills_to_global.ps1
scripts/common_scripts/: build_bridge_docs_v2.py  docx_utils.py
skills/alpha-vantage/: SKILL.md
skills/antibody-kinetics/: SKILL.md  examples.md  reference.md
skills/antibody-kinetics/scripts/: fit_mixedlm_subject.py  fit_powerlaw_summary.py  run_antibody_kinetics_pipeline.py
skills/brenda-database/scripts/: brenda_queries.py  enzyme_pathway_builder.py
skills/citation-management/: SKILL.md
skills/clinical-decision-support/: SKILL.md
skills/clinical-decision-support/references/: INDEX.md
skills/clinical-decision-support/scripts/: generate_survival_analysis.py
skills/clinical-reports/references/: INDEX.md
skills/csr-stage-docx-workflow/: SKILL.md
skills/database-lookup/: SKILL.md
skills/database-lookup/references/: INDEX.md
skills/document-skills-pdf/scripts/: check_bounding_boxes_test.py
skills/edgartools/: SKILL.md
skills/fireworks-tech-graph/: SKILL.md
skills/fireworks-tech-graph/scripts/: validate-svg.sh  (+1 more)
skills/fred-economic-data/: SKILL.md
skills/geomaster/: SKILL.md
skills/github-proxy-push/: SKILL.md
skills/hedgefundmonitor/: SKILL.md
skills/markitdown/: SKILL.md
skills/paper-lookup/: SKILL.md
skills/pptx-gmc-sync-from-word/: SKILL.md
skills/scientific-schematics/: SKILL.md
skills/scientific-writing/: SKILL.md
skills/timesfm-forecasting/: SKILL.md
skills/treatment-plans/: SKILL.md
skills/word-audit-report-format/: SKILL.md
(+10 files in other folders)
